# run_external

./: CMakeLists.txt  COPYING  README.md  run_external_udf.cc  run_external_udf.def  run_external_udf.h
mysql-test/suite/run_external/r/: touch_file.result
mysql-test/suite/run_external/t/: touch_file.test
